--- a/ReactNativeApp_User/package.json
+++ b/ReactNativeApp_User/package.json
@@ -7,12 +7,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "native-base": "^2.12.1",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "0.59.4",
     "react-native-axios": "^0.17.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-modal-wrapper": "^3.1.1",
     "react-navigation": "^3.8.1",
     "react-redux": "^7.0.2",
     "redux": "^4.0.1",
