--- a/ReactNativeApp_User/package.json
+++ b/ReactNativeApp_User/package.json
@@ -15,6 +15,7 @@
     "react-native-axios": "^0.17.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-maps": "^0.24.2",
     "react-native-modal-wrapper": "^3.1.1",
     "react-navigation": "^3.8.1",
     "react-redux": "^7.0.2",
